# libral2

./: AUTHORS  Doxyfile  Makefile.am  README.md  configure.ac  index.dox  libral2.pc.in  test.c
include/priv/: cell.h  class.h  dem.h  geometry.h  grid.h  msg.h  pixbuf.h  priv.h  util.h
include/ral2/: array.h  bin.h  class.h  classifier.h  color.h  config.h.in  coords.h  data_point.h  error.h  feature.h  geometry.h  grid.h  hash.h  integer.h  interval.h  kvp.h  layer.h  linear_interpolation.h  ordinal.h  pixbuf.h  ral.h  raster.h  real.h  storage.h  string.h  style.h  symbol.h  vector.h
include/ral2/grid/: dem.h  image.h  io.h  neighborhood.h  rasterize.h  resample.h  statistics.h
src/: array.c  bin.c  cell.c  class.c  classifier.c  color.c  color_component_scale.c  data_point.c  error.c  feature.c  geometry.c  grayscale.c  grid.c  hash.c  hue_scale.c  integer.c  interval.c  kvp.c  layer.c  linear_interpolation.c  object.c  ordinal.c  pixbuf.c  raster.c  rcoords.c  real.c  storage.c  string.c  style.c  symbol.c  vector.c  wbox.c  wcoords.c
src/grid/: dem.c  image.c  io.c  neighborhood.c  rasterize.c  resample.c  statistics.c
